htmli lisamine bodysse

--- a/esimene.html
+++ b/esimene.html
@@ -43,6 +43,12 @@
         // Ninii
         // Jajaa
 
+        var link = document.createElement("a");
+        link.setAttribute('href', "http://google.com");
+        link.innerHTML = "Google kodulehekülg";
+
+        document.body.appendChild(link);
+
     </script>
 </body>
 
