--- a/esimene.html
+++ b/esimene.html
@@ -45,6 +45,7 @@
         // Veel üks proov
         // Ninii
         // Jajaa
+        // viimane komm
 
         var link = document.createElement("a");
         link.setAttribute('href', "#esimene");
