--- a/canvas.html
+++ b/canvas.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
+        #canvas {
+            border: 1px solid #000
+        }
+    </style>
     <title>Document</title>
 </head>
 <body>
-    
+
+    <canvas id="canvas" width="500" height="300"></canvas>
+    <script>
+        var canvas = document.getElementById("canvas");
+        var ctx = canvas.getContext("2d");
+
+        ctx.fillRect(10, 10, 200, 100);
+    </script>
 </body>
 </html>
