--- a/canvas.html
+++ b/canvas.html
@@ -13,10 +13,14 @@
 </head>
 <body>
 
-    <canvas id="canvas" width="500" height="300"></canvas>
+    <canvas id="canvas" width="1000" height="600">
+            <img id="source" src="https://mdn.mozillademos.org/files/5397/rhino.jpg"
+            width="300" height="227">
+    </canvas>
     <script>
         var canvas = document.getElementById("canvas");
         var ctx = canvas.getContext("2d");
+        var image = document.getElementById('source');
 
         ctx.fillRect(10, 10, 200, 100);
 
@@ -50,7 +54,8 @@
         ctx.fillStyle = "rgb(0, 0, 0)";
         ctx.font = "30px Comic Sans MS";
         ctx.fillText("Tekst canvasel", 10, 260)
-
+        
+        ctx.drawImage(image, 500, 10);
     </script>
 </body>
 </html>
